crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_teams__adaptivecard_actions.snap
---
source: crates/provider-tests/tests/provider_harness.rs
assertion_line: 356
expression: value
---
{
  "event": {
    "channel": "teams",
    "id": "<FIXED>",
    "metadata": {
      "activityId": "teams-adaptivecard_actions-id",
      "reply_to_id": "teams-adaptivecard_actions-id",
      "universal": "true"
    },
    "session_id": "teams",
    "tenant": {
      "attempt": 0,
      "env": "default",
      "tenant": "default",
      "tenant_id": "default"
    },
    "text": "adaptivecard actions message from teams"
  },
  "ok": true
}
