crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_teams__adaptivecard_columns.snap
---
source: crates/provider-tests/tests/provider_harness.rs
expression: value
---
{
  "event": {
    "channel": "teams",
    "id": "<FIXED>",
    "metadata": {
      "activityId": "teams-adaptivecard_columns-id",
      "reply_to_id": "teams-adaptivecard_columns-id",
      "universal": "true"
    },
    "session_id": "teams",
    "tenant": {
      "attempt": 0,
      "env": "default",
      "tenant": "default",
      "tenant_id": "default"
    },
    "text": "adaptivecard columns message from teams"
  },
  "ok": true
}
