crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_teams__adaptivecard_inputs.snap
---
source: crates/provider-tests/tests/provider_harness.rs
expression: value
---
{
  "event": {
    "channel": "teams",
    "id": "<FIXED>",
    "metadata": {
      "activityId": "teams-adaptivecard_inputs-id",
      "reply_to_id": "teams-adaptivecard_inputs-id",
      "universal": "true"
    },
    "session_id": "teams",
    "tenant": {
      "attempt": 0,
      "env": "default",
      "tenant": "default",
      "tenant_id": "default"
    },
    "text": "adaptivecard inputs message from teams"
  },
  "ok": true
}
