crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_teams__simple_text.snap
---
source: crates/provider-tests/tests/provider_harness.rs
expression: value
---
{
  "event": {
    "channel": "teams",
    "id": "<FIXED>",
    "metadata": {
      "activityId": "teams-simple_text-id",
      "reply_to_id": "teams-simple_text-id",
      "universal": "true"
    },
    "session_id": "teams",
    "tenant": {
      "attempt": 0,
      "env": "default",
      "tenant": "default",
      "tenant_id": "default"
    },
    "text": "simple text message from teams"
  },
  "ok": true
}
